--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,4 +1,3 @@
-/* This is a test */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -9,6 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* Header Sytle Starts */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -41,6 +41,7 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
+/* Header Style Ends */
 
 a {
     color: #ffffff;
@@ -76,6 +77,7 @@ p {
     margin-left: 20px;
 }
 
+/* Benefits Style Start */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -134,7 +136,7 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* Benefits Style Ends */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -189,6 +191,7 @@ p {
     font-size: 36px;
 }
 
+/* Footer Style Start */
 .footer {
     padding: 30px;
     clear: both;
@@ -199,3 +202,4 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+/* Footer Style Ends */
