--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,6 +8,15 @@ body {
     background-color: #d9dcd6;
 }
 
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
 /* Header Sytle Starts */
 .header {
     padding: 20px;
@@ -25,7 +34,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -33,25 +42,17 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 /* Header Style Ends */
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
-
+/* Hero Style Starts */
 .hero {
     height: 800px;
     width: 100%;
@@ -60,7 +61,9 @@ p {
     background-size: cover;
     background-position: center;
 }
+/* Hero Style Ends */
 
+/* Content Style Start */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -77,7 +80,16 @@ p {
     margin-left: 20px;
 }
 
-.search-engine-optimization {
+.content-article {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+/* .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -102,9 +114,13 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+} */
+
+.content-article img {
+    max-height: 200px;
 }
 
-.search-engine-optimization img {
+/* .search-engine-optimization img {
     max-height: 200px;
 }
 
@@ -114,9 +130,14 @@ p {
 
 .social-media-marketing img {
     max-height: 200px;
+} */
+
+.content-article h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
-.search-engine-optimization h2 {
+/* .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -129,8 +150,8 @@ p {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
-
+} */
+/* Content Style Ends */
 
 /* Benefits Style Start */
 .benefits {
